works up to Jan

--- a/make-dataset-hs4.ipynb
+++ b/make-dataset-hs4.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \".\\\\data\"+ \"\\\\phaseone-tradedata-C-january.parquet\"\n",
+    "file = \".\\\\data\"+ \"\\\\phaseone-tradedata-C-febuary.parquet\"\n",
     "\n",
     "df = pq.read_table(file).to_pandas()\n",
     "\n",
@@ -93,9 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['HS CODE 2915, Saturated acyclic monocarboxylic acids and their anhydrides, halides, peroxides and peroxyacids; their halogenated, sulfonated, nitrated or nitrosated derivatives',\n",
-       "       'HS CODE 2103, Sauces and preparations therefor; mixed condiments and mixed seasonings; mustard flour and meal and prepared mustard',\n",
-       "       'HS CODE 1601, Sausages and similar products, of meat, meat offalor blood; food preparations based on these products',\n",
+       "Index(['HS CODE 1601, Sausages and similar products, of meat, meat offalor blood; food preparations based on these products',\n",
        "       'HS CODE 0909, Seeds of anise, badian, fennel, coriander, cumin or caraway; juniper berries',\n",
        "       'HS CODE 1209, Seeds, fruit and spores, of a kind used for sowing',\n",
        "       'HS CODE 8429, Self-propelled bulldozers, angledozers, graders, levelers, scrapers, mechanical shovels, excavators, shovel loaders, tamping machines and road rollers',\n",
@@ -117,7 +115,9 @@
        "       'HS CODE 1201, Soybeans    , whether or not broken',\n",
        "       'HS CODE 8407, Spark-ignition reciprocating or rotary internal combustion piston engines',\n",
        "       'HS CODE 7218, Stainless steel in ingots or other primary forms; semi-finished products of stainless steel',\n",
-       "       'HS CODE 8402, Stearn or other vapor generating boilers (other than central heating hot ,vater boilers capable also of producing low pressure steam); super-heated ,vater boilers;'],\n",
+       "       'HS CODE 8402, Stearn or other vapor generating boilers (other than central heating hot ,vater boilers capable also of producing low pressure steam); super-heated ,vater boilers;',\n",
+       "       'HS CODE 8406, Stearn turbines and other vapor turbines, and parts thereof',\n",
+       "       'HS CODE 1704, Sugar confectionary (including white chocolate), not containing cocoa'],\n",
        "      dtype='object', name='description')"
       ]
      },
