--- a/make-imports-hs2-dataset.ipynb
+++ b/make-imports-hs2-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = \"2020-12\"\n",
+    "date = \"2021-01\"\n",
     "\n",
     "my_key = \"&key=34e40301bda77077e24c859c6c6c0b721ad73fc7\"\n",
     "# This is my key. I'm nice and I have it posted. If you will be doing more with this\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "['TOTAL FOR ALL COUNTRIES', 'NAFTA', 'EUROPEAN UNION']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,19 +116,19 @@
        " '5330',\n",
        " '4279',\n",
        " '4759',\n",
-       " '4190',\n",
        " '5520',\n",
+       " '4190',\n",
        " '5830',\n",
        " '4419',\n",
        " '5570',\n",
        " '5490',\n",
        " '3510',\n",
        " '5170',\n",
-       " '5081',\n",
-       " '5590']"
+       " '5590',\n",
+       " '5081']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,73 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "<Response [200]>\n",
-      "5700\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:383: FutureWarning: RangeIndex._start is deprecated and will be removed in a future version. Use RangeIndex.start instead\n",
-      "  'start': level._start,\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:384: FutureWarning: RangeIndex._stop is deprecated and will be removed in a future version. Use RangeIndex.stop instead\n",
-      "  'stop': level._stop,\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:385: FutureWarning: RangeIndex._step is deprecated and will be removed in a future version. Use RangeIndex.step instead\n",
-      "  'step': level._step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [200]>\n",
-      "2010\n",
-      "<Response [200]>\n",
-      "1220\n",
-      "<Response [200]>\n",
-      "5880\n",
-      "<Response [200]>\n",
-      "4280\n",
-      "<Response [200]>\n",
-      "5800\n",
-      "<Response [200]>\n",
-      "4120\n",
-      "<Response [200]>\n",
-      "5330\n",
-      "<Response [200]>\n",
-      "4279\n",
-      "<Response [200]>\n",
-      "4759\n",
-      "<Response [200]>\n",
-      "4190\n",
-      "<Response [200]>\n",
-      "5520\n",
-      "<Response [200]>\n",
-      "5830\n",
-      "<Response [200]>\n",
-      "4419\n",
-      "<Response [200]>\n",
-      "5570\n",
-      "<Response [200]>\n",
-      "5490\n",
-      "<Response [200]>\n",
-      "3510\n",
-      "<Response [200]>\n",
-      "5170\n",
-      "<Response [200]>\n",
-      "5081\n",
-      "<Response [200]>\n",
-      "5590\n",
-      "<Response [200]>\n"
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n"
      ]
     }
    ],
@@ -251,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -354,88 +315,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-01-01</th>\n",
+       "      <th>2021-01-01</th>\n",
        "      <td>00</td>\n",
-       "      <td>3.346214e+10</td>\n",
-       "      <td>4.643784e+09</td>\n",
-       "      <td>13.877728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-02-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>2.343340e+10</td>\n",
-       "      <td>3.169557e+09</td>\n",
-       "      <td>13.525809</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>1.973310e+10</td>\n",
-       "      <td>1.948458e+09</td>\n",
-       "      <td>9.874058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>3.070681e+10</td>\n",
-       "      <td>2.834710e+09</td>\n",
-       "      <td>9.231537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>3.606326e+10</td>\n",
-       "      <td>3.230749e+09</td>\n",
-       "      <td>8.958561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>3.751775e+10</td>\n",
-       "      <td>3.331768e+09</td>\n",
-       "      <td>8.880510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-07-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.135432e+10</td>\n",
-       "      <td>3.683415e+09</td>\n",
-       "      <td>8.906965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.072008e+10</td>\n",
-       "      <td>3.966096e+09</td>\n",
-       "      <td>9.739903</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.101666e+10</td>\n",
-       "      <td>3.943371e+09</td>\n",
-       "      <td>9.614071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-10-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.496874e+10</td>\n",
-       "      <td>4.007585e+09</td>\n",
-       "      <td>8.911934</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-11-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.398016e+10</td>\n",
-       "      <td>3.711510e+09</td>\n",
-       "      <td>8.439055</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.274530e+10</td>\n",
-       "      <td>4.016541e+09</td>\n",
-       "      <td>9.396452</td>\n",
+       "      <td>3.819920e+10</td>\n",
+       "      <td>4.331589e+09</td>\n",
+       "      <td>11.339476</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -444,27 +328,16 @@
       "text/plain": [
        "           I_COMMODITY       imports          duty    itariff\n",
        "time                                                         \n",
-       "2020-01-01          00  3.346214e+10  4.643784e+09  13.877728\n",
-       "2020-02-01          00  2.343340e+10  3.169557e+09  13.525809\n",
-       "2020-03-01          00  1.973310e+10  1.948458e+09   9.874058\n",
-       "2020-04-01          00  3.070681e+10  2.834710e+09   9.231537\n",
-       "2020-05-01          00  3.606326e+10  3.230749e+09   8.958561\n",
-       "2020-06-01          00  3.751775e+10  3.331768e+09   8.880510\n",
-       "2020-07-01          00  4.135432e+10  3.683415e+09   8.906965\n",
-       "2020-08-01          00  4.072008e+10  3.966096e+09   9.739903\n",
-       "2020-09-01          00  4.101666e+10  3.943371e+09   9.614071\n",
-       "2020-10-01          00  4.496874e+10  4.007585e+09   8.911934\n",
-       "2020-11-01          00  4.398016e+10  3.711510e+09   8.439055\n",
-       "2020-12-01          00  4.274530e+10  4.016541e+09   9.396452"
+       "2021-01-01          00  3.819920e+10  4.331589e+09  11.339476"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[\"CHINA\",\"ALL PRODUCTS\"][\"2020\"]"
+    "df.loc[\"CHINA\",\"ALL PRODUCTS\"][\"2021\"]"
    ]
   },
   {
