--- a/make-exports-hs2-dataset.ipynb
+++ b/make-exports-hs2-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = \"2020-12\"\n",
+    "date = \"2021-01\"\n",
     "\n",
     "my_key = \"&key=34e40301bda77077e24c859c6c6c0b721ad73fc7\"\n",
     "# This is my key. I'm nice and I have it posted. If you will be doing more with this\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "['TOTAL FOR ALL COUNTRIES', 'NAFTA', 'EUROPEAN UNION']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        " '5170']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,79 +139,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "<Response [200]>\n",
-      "1220\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:383: FutureWarning: RangeIndex._start is deprecated and will be removed in a future version. Use RangeIndex.start instead\n",
-      "  'start': level._start,\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:384: FutureWarning: RangeIndex._stop is deprecated and will be removed in a future version. Use RangeIndex.stop instead\n",
-      "  'stop': level._stop,\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:385: FutureWarning: RangeIndex._step is deprecated and will be removed in a future version. Use RangeIndex.step instead\n",
-      "  'step': level._step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [200]>\n",
-      "2010\n",
-      "<Response [200]>\n",
-      "5700\n",
-      "<Response [200]>\n",
-      "5880\n",
-      "<Response [200]>\n",
-      "4120\n",
-      "<Response [200]>\n",
-      "4280\n",
-      "<Response [200]>\n",
-      "5800\n",
-      "<Response [200]>\n",
-      "4210\n",
-      "<Response [200]>\n",
-      "3510\n",
-      "<Response [200]>\n",
-      "5820\n",
-      "<Response [200]>\n",
-      "4279\n",
-      "<Response [200]>\n",
-      "4231\n",
-      "<Response [200]>\n",
-      "5590\n",
-      "<Response [200]>\n",
-      "5830\n",
-      "<Response [200]>\n",
-      "5330\n",
-      "<Response [200]>\n",
-      "6021\n",
-      "<Response [200]>\n",
-      "4419\n",
-      "<Response [200]>\n",
-      "5200\n",
-      "<Response [200]>\n",
-      "4759\n",
-      "<Response [200]>\n",
-      "5170\n",
-      "<Response [200]>\n"
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n",
+      "Already have downloaded file\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "end_use = \"hs?get=CTY_NAME,ALL_VAL_MO,E_COMMODITY,E_COMMODITY_SDESC\"\n",
     "\n",
     "surl = \"https://api.census.gov/data/timeseries/intltrade/exports/\" + end_use \n",
@@ -253,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,11 +304,6 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">UNITED KINGDOM</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">ALL PRODUCTS</th>\n",
-       "      <th>2020-08-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>4.743759e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-09-01</th>\n",
        "      <td>00</td>\n",
        "      <td>5.025366e+09</td>\n",
@@ -369,6 +323,11 @@
        "      <td>00</td>\n",
        "      <td>4.661065e+09</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>00</td>\n",
+       "      <td>4.670680e+09</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -376,14 +335,14 @@
       "text/plain": [
        "                                            E_COMMODITY       exports\n",
        "CTY_NAME       E_COMMODITY_SDESC time                                \n",
-       "UNITED KINGDOM ALL PRODUCTS      2020-08-01          00  4.743759e+09\n",
-       "                                 2020-09-01          00  5.025366e+09\n",
+       "UNITED KINGDOM ALL PRODUCTS      2020-09-01          00  5.025366e+09\n",
        "                                 2020-10-01          00  5.445534e+09\n",
        "                                 2020-11-01          00  5.366735e+09\n",
-       "                                 2020-12-01          00  4.661065e+09"
+       "                                 2020-12-01          00  4.661065e+09\n",
+       "                                 2021-01-01          00  4.670680e+09"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
