updates, price stuff

--- a/make-exports-hs2-dataset.ipynb
+++ b/make-exports-hs2-dataset.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = \"2021-01\"\n",
+    "date = \"2021-03\"\n",
     "\n",
     "my_key = \"&key=34e40301bda77077e24c859c6c6c0b721ad73fc7\"\n",
     "# This is my key. I'm nice and I have it posted. If you will be doing more with this\n",
@@ -146,27 +146,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n"
+      "\n",
+      "<Response [200]>\n",
+      "1220\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:383: FutureWarning: RangeIndex._start is deprecated and will be removed in a future version. Use RangeIndex.start instead\n",
+      "  'start': level._start,\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:384: FutureWarning: RangeIndex._stop is deprecated and will be removed in a future version. Use RangeIndex.stop instead\n",
+      "  'stop': level._stop,\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:385: FutureWarning: RangeIndex._step is deprecated and will be removed in a future version. Use RangeIndex.step instead\n",
+      "  'step': level._step\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "2010\n",
+      "<Response [200]>\n",
+      "5700\n",
+      "<Response [200]>\n",
+      "5880\n",
+      "<Response [200]>\n",
+      "4120\n",
+      "<Response [200]>\n",
+      "4280\n",
+      "<Response [200]>\n",
+      "5800\n",
+      "<Response [200]>\n",
+      "4210\n",
+      "<Response [200]>\n",
+      "3510\n",
+      "<Response [200]>\n",
+      "5820\n",
+      "<Response [200]>\n",
+      "4279\n",
+      "<Response [200]>\n",
+      "4231\n",
+      "<Response [200]>\n",
+      "5590\n",
+      "<Response [200]>\n",
+      "5830\n",
+      "<Response [200]>\n",
+      "5330\n",
+      "<Response [200]>\n",
+      "6021\n",
+      "<Response [200]>\n",
+      "4419\n",
+      "<Response [200]>\n",
+      "5200\n",
+      "<Response [200]>\n",
+      "4759\n",
+      "<Response [200]>\n",
+      "5170\n",
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -304,16 +343,6 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">UNITED KINGDOM</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">ALL PRODUCTS</th>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>5.025366e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-10-01</th>\n",
-       "      <td>00</td>\n",
-       "      <td>5.445534e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-11-01</th>\n",
        "      <td>00</td>\n",
        "      <td>5.366735e+09</td>\n",
@@ -328,6 +357,16 @@
        "      <td>00</td>\n",
        "      <td>4.670680e+09</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>00</td>\n",
+       "      <td>4.539610e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>00</td>\n",
+       "      <td>5.324805e+09</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -335,11 +374,11 @@
       "text/plain": [
        "                                            E_COMMODITY       exports\n",
        "CTY_NAME       E_COMMODITY_SDESC time                                \n",
-       "UNITED KINGDOM ALL PRODUCTS      2020-09-01          00  5.025366e+09\n",
-       "                                 2020-10-01          00  5.445534e+09\n",
-       "                                 2020-11-01          00  5.366735e+09\n",
+       "UNITED KINGDOM ALL PRODUCTS      2020-11-01          00  5.366735e+09\n",
        "                                 2020-12-01          00  4.661065e+09\n",
-       "                                 2021-01-01          00  4.670680e+09"
+       "                                 2021-01-01          00  4.670680e+09\n",
+       "                                 2021-02-01          00  4.539610e+09\n",
+       "                                 2021-03-01          00  5.324805e+09"
       ]
      },
      "execution_count": 8,
@@ -349,6 +388,172 @@
    ],
    "source": [
     "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CTY_NAME</th>\n",
+       "      <th>time</th>\n",
+       "      <th>exports</th>\n",
+       "      <th>E_COMMODITY</th>\n",
+       "      <th>E_COMMODITY_SDESC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1782</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1.230319e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1783</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>1.234436e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1784</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2013-03-01</td>\n",
+       "      <td>1.366422e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1785</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2013-04-01</td>\n",
+       "      <td>1.294606e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1786</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2013-05-01</td>\n",
+       "      <td>1.329687e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1876</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2020-11-01</td>\n",
+       "      <td>1.269664e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1877</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2020-12-01</td>\n",
+       "      <td>1.325647e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1878</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1.276383e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1879</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>1.239366e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1880</th>\n",
+       "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>1.515995e+11</td>\n",
+       "      <td>00</td>\n",
+       "      <td>ALL PRODUCTS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>99 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     CTY_NAME       time       exports E_COMMODITY  \\\n",
+       "1782  TOTAL FOR ALL COUNTRIES 2013-01-01  1.230319e+11          00   \n",
+       "1783  TOTAL FOR ALL COUNTRIES 2013-02-01  1.234436e+11          00   \n",
+       "1784  TOTAL FOR ALL COUNTRIES 2013-03-01  1.366422e+11          00   \n",
+       "1785  TOTAL FOR ALL COUNTRIES 2013-04-01  1.294606e+11          00   \n",
+       "1786  TOTAL FOR ALL COUNTRIES 2013-05-01  1.329687e+11          00   \n",
+       "...                       ...        ...           ...         ...   \n",
+       "1876  TOTAL FOR ALL COUNTRIES 2020-11-01  1.269664e+11          00   \n",
+       "1877  TOTAL FOR ALL COUNTRIES 2020-12-01  1.325647e+11          00   \n",
+       "1878  TOTAL FOR ALL COUNTRIES 2021-01-01  1.276383e+11          00   \n",
+       "1879  TOTAL FOR ALL COUNTRIES 2021-02-01  1.239366e+11          00   \n",
+       "1880  TOTAL FOR ALL COUNTRIES 2021-03-01  1.515995e+11          00   \n",
+       "\n",
+       "     E_COMMODITY_SDESC  \n",
+       "1782      ALL PRODUCTS  \n",
+       "1783      ALL PRODUCTS  \n",
+       "1784      ALL PRODUCTS  \n",
+       "1785      ALL PRODUCTS  \n",
+       "1786      ALL PRODUCTS  \n",
+       "...                ...  \n",
+       "1876      ALL PRODUCTS  \n",
+       "1877      ALL PRODUCTS  \n",
+       "1878      ALL PRODUCTS  \n",
+       "1879      ALL PRODUCTS  \n",
+       "1880      ALL PRODUCTS  \n",
+       "\n",
+       "[99 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total[total.CTY_NAME == \"TOTAL FOR ALL COUNTRIES\"]"
    ]
   },
   {
