--- a/make-imports-hs2-dataset.ipynb
+++ b/make-imports-hs2-dataset.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = \"2021-01\"\n",
+    "date = \"2021-03\"\n",
     "\n",
     "my_key = \"&key=34e40301bda77077e24c859c6c6c0b721ad73fc7\"\n",
     "# This is my key. I'm nice and I have it posted. If you will be doing more with this\n",
@@ -115,8 +115,8 @@
        " '4120',\n",
        " '5330',\n",
        " '4279',\n",
-       " '4759',\n",
        " '5520',\n",
+       " '4759',\n",
        " '4190',\n",
        " '5830',\n",
        " '4419',\n",
@@ -146,27 +146,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n",
-      "Already have downloaded file\n"
+      "\n",
+      "<Response [200]>\n",
+      "5700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:383: FutureWarning: RangeIndex._start is deprecated and will be removed in a future version. Use RangeIndex.start instead\n",
+      "  'start': level._start,\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:384: FutureWarning: RangeIndex._stop is deprecated and will be removed in a future version. Use RangeIndex.stop instead\n",
+      "  'stop': level._stop,\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pyarrow\\pandas_compat.py:385: FutureWarning: RangeIndex._step is deprecated and will be removed in a future version. Use RangeIndex.step instead\n",
+      "  'step': level._step\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "2010\n",
+      "<Response [200]>\n",
+      "1220\n",
+      "<Response [200]>\n",
+      "5880\n",
+      "<Response [200]>\n",
+      "4280\n",
+      "<Response [200]>\n",
+      "5800\n",
+      "<Response [200]>\n",
+      "4120\n",
+      "<Response [200]>\n",
+      "5330\n",
+      "<Response [200]>\n",
+      "4279\n",
+      "<Response [200]>\n",
+      "5520\n",
+      "<Response [200]>\n",
+      "4759\n",
+      "<Response [200]>\n",
+      "4190\n",
+      "<Response [200]>\n",
+      "5830\n",
+      "<Response [200]>\n",
+      "4419\n",
+      "<Response [200]>\n",
+      "5570\n",
+      "<Response [200]>\n",
+      "5490\n",
+      "<Response [200]>\n",
+      "3510\n",
+      "<Response [200]>\n",
+      "5170\n",
+      "<Response [200]>\n",
+      "5590\n",
+      "<Response [200]>\n",
+      "5081\n",
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -268,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,6 +360,20 @@
        "      <td>4.331589e+09</td>\n",
        "      <td>11.339476</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>00</td>\n",
+       "      <td>3.395794e+10</td>\n",
+       "      <td>3.903253e+09</td>\n",
+       "      <td>11.494374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>00</td>\n",
+       "      <td>4.018032e+10</td>\n",
+       "      <td>4.620955e+09</td>\n",
+       "      <td>11.500542</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -328,10 +381,12 @@
       "text/plain": [
        "           I_COMMODITY       imports          duty    itariff\n",
        "time                                                         \n",
-       "2021-01-01          00  3.819920e+10  4.331589e+09  11.339476"
+       "2021-01-01          00  3.819920e+10  4.331589e+09  11.339476\n",
+       "2021-02-01          00  3.395794e+10  3.903253e+09  11.494374\n",
+       "2021-03-01          00  4.018032e+10  4.620955e+09  11.500542"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -459,71 +514,71 @@
        "    <tr>\n",
        "      <th>93</th>\n",
        "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
-       "      <td>107648878</td>\n",
-       "      <td>2837501</td>\n",
-       "      <td>86</td>\n",
-       "      <td>RAILWAY OR TRAMWAY STOCK ETC</td>\n",
-       "      <td>2020-12</td>\n",
+       "      <td>484465278</td>\n",
+       "      <td>9355681</td>\n",
+       "      <td>93</td>\n",
+       "      <td>ARMS AND AMMUNITION; PARTS AND ACCESSORIES THE...</td>\n",
+       "      <td>2021-03</td>\n",
        "      <td>HS2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>94</th>\n",
        "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
-       "      <td>8325166681</td>\n",
-       "      <td>107324746</td>\n",
-       "      <td>90</td>\n",
-       "      <td>OPTIC, PHOTO ETC, MEDIC OR S</td>\n",
-       "      <td>2020-12</td>\n",
+       "      <td>6195877496</td>\n",
+       "      <td>485481580</td>\n",
+       "      <td>94</td>\n",
+       "      <td>FURNITURE; BEDDING ETC; LAMPS NESOI ETC</td>\n",
+       "      <td>2021-03</td>\n",
        "      <td>HS2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
        "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
-       "      <td>28055911741</td>\n",
-       "      <td>585294233</td>\n",
-       "      <td>87</td>\n",
-       "      <td>VEHICLES, EXCEPT RAILWAY OR TRAMWAY, AND PARTS...</td>\n",
-       "      <td>2020-12</td>\n",
+       "      <td>475117816</td>\n",
+       "      <td>12833069</td>\n",
+       "      <td>91</td>\n",
+       "      <td>CLOCKS AND WATCHES AND PARTS THEREOF</td>\n",
+       "      <td>2021-03</td>\n",
        "      <td>HS2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
-       "      <td>136801533</td>\n",
-       "      <td>8609254</td>\n",
-       "      <td>92</td>\n",
-       "      <td>MUSICAL INSTRUMENTS; PARTS AND ACCESSORIES THE...</td>\n",
-       "      <td>2020-12</td>\n",
+       "      <td>1836070435</td>\n",
+       "      <td>4659583</td>\n",
+       "      <td>88</td>\n",
+       "      <td>AIRCRAFT, SPACECRAFT, AND PARTS THEREOF</td>\n",
+       "      <td>2021-03</td>\n",
        "      <td>HS2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>TOTAL FOR ALL COUNTRIES</td>\n",
-       "      <td>420159584</td>\n",
-       "      <td>8360805</td>\n",
-       "      <td>93</td>\n",
-       "      <td>ARMS AND AMMUNITION; PARTS AND ACCESSORIES THE...</td>\n",
-       "      <td>2020-12</td>\n",
+       "      <td>200468476</td>\n",
+       "      <td>3631278</td>\n",
+       "      <td>89</td>\n",
+       "      <td>SHIPS, BOATS AND FLOATING STRUCTURES</td>\n",
+       "      <td>2021-03</td>\n",
        "      <td>HS2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9408 rows × 7 columns</p>\n",
+       "<p>9702 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   CTY_NAME   CON_VAL_MO CAL_DUT_MO I_COMMODITY  \\\n",
-       "0   TOTAL FOR ALL COUNTRIES    221313094        417          01   \n",
-       "1   TOTAL FOR ALL COUNTRIES    246092109        823          01   \n",
-       "2   TOTAL FOR ALL COUNTRIES    261244392         75          01   \n",
-       "3   TOTAL FOR ALL COUNTRIES    271133926       1389          01   \n",
-       "4   TOTAL FOR ALL COUNTRIES    209785289         50          01   \n",
-       "..                      ...          ...        ...         ...   \n",
-       "93  TOTAL FOR ALL COUNTRIES    107648878    2837501          86   \n",
-       "94  TOTAL FOR ALL COUNTRIES   8325166681  107324746          90   \n",
-       "95  TOTAL FOR ALL COUNTRIES  28055911741  585294233          87   \n",
-       "96  TOTAL FOR ALL COUNTRIES    136801533    8609254          92   \n",
-       "97  TOTAL FOR ALL COUNTRIES    420159584    8360805          93   \n",
+       "                   CTY_NAME  CON_VAL_MO CAL_DUT_MO I_COMMODITY  \\\n",
+       "0   TOTAL FOR ALL COUNTRIES   221313094        417          01   \n",
+       "1   TOTAL FOR ALL COUNTRIES   246092109        823          01   \n",
+       "2   TOTAL FOR ALL COUNTRIES   261244392         75          01   \n",
+       "3   TOTAL FOR ALL COUNTRIES   271133926       1389          01   \n",
+       "4   TOTAL FOR ALL COUNTRIES   209785289         50          01   \n",
+       "..                      ...         ...        ...         ...   \n",
+       "93  TOTAL FOR ALL COUNTRIES   484465278    9355681          93   \n",
+       "94  TOTAL FOR ALL COUNTRIES  6195877496  485481580          94   \n",
+       "95  TOTAL FOR ALL COUNTRIES   475117816   12833069          91   \n",
+       "96  TOTAL FOR ALL COUNTRIES  1836070435    4659583          88   \n",
+       "97  TOTAL FOR ALL COUNTRIES   200468476    3631278          89   \n",
        "\n",
        "                                    I_COMMODITY_SDESC     time COMM_LVL  \n",
        "0                                        LIVE ANIMALS  2013-01      HS2  \n",
@@ -532,16 +587,16 @@
        "3                                        LIVE ANIMALS  2013-04      HS2  \n",
        "4                                        LIVE ANIMALS  2013-05      HS2  \n",
        "..                                                ...      ...      ...  \n",
-       "93                       RAILWAY OR TRAMWAY STOCK ETC  2020-12      HS2  \n",
-       "94                       OPTIC, PHOTO ETC, MEDIC OR S  2020-12      HS2  \n",
-       "95  VEHICLES, EXCEPT RAILWAY OR TRAMWAY, AND PARTS...  2020-12      HS2  \n",
-       "96  MUSICAL INSTRUMENTS; PARTS AND ACCESSORIES THE...  2020-12      HS2  \n",
-       "97  ARMS AND AMMUNITION; PARTS AND ACCESSORIES THE...  2020-12      HS2  \n",
+       "93  ARMS AND AMMUNITION; PARTS AND ACCESSORIES THE...  2021-03      HS2  \n",
+       "94            FURNITURE; BEDDING ETC; LAMPS NESOI ETC  2021-03      HS2  \n",
+       "95               CLOCKS AND WATCHES AND PARTS THEREOF  2021-03      HS2  \n",
+       "96            AIRCRAFT, SPACECRAFT, AND PARTS THEREOF  2021-03      HS2  \n",
+       "97               SHIPS, BOATS AND FLOATING STRUCTURES  2021-03      HS2  \n",
        "\n",
-       "[9408 rows x 7 columns]"
+       "[9702 rows x 7 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
